[project]
name = "xstream-inference"
version = "0.1.0"
description = "X-Stream multimodal QA inference pipeline (vLLM + MLLMFlow + ModelHub)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
dependencies = [
    # vLLM serving stack — pulls torch 2.10, the nvidia cu12 wheels,
    # flashinfer, xgrammar, transformers, tokenizers, etc.
    "vllm==0.19.0",
    # Pinned to match the working venv. vLLM allows newer transformers but
    # Qwen3-VL / Qwen3-Omni need >=4.56.
    "transformers==4.57.3",
    # MLLMFlow runtime deps (mirrored here so `uv sync` is enough on its own).
    # moviepy is exact-pinned because mllmflow's video splitter calls 2.x APIs.
    "moviepy==2.2.1",
    "json-repair>=0.55.0",
    # ModelHub HTTP adapters
    "requests>=2.32.0",
    "openai>=1.50.0",
    "aiohttp>=3.10.0",
    # Misc utility
    "tqdm>=4.66.0",
    "numpy>=2.2.0",
]

[project.optional-dependencies]
# Local-only packages that live under third_party/. These are listed in a
# separate group so a network-only `uv sync` does not fail when the user
# has not yet checked out the vendored packages. After the packages are present,
# install them with `uv sync --extra local` (see README).
local = [
    "mllmflow",
    "model-hub",
    "stream-eval",
]

[tool.uv.sources]
mllmflow = { path = "third_party/MLLMFlow", editable = true }
model-hub = { path = "third_party/ModelHub", editable = true }
stream-eval = { path = "third_party/stream-eval", editable = true }

[tool.uv]
# vLLM ships its own CUDA wheels; we don't need an extra index.
required-version = ">=0.4"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This project is the orchestration shell — no Python package to install.
py-modules = []
